--- a/common/util/Functions_JobStreet_Scraper.ipynb
+++ b/common/util/Functions_JobStreet_Scraper.ipynb
@@ -5,10 +5,7 @@
    "id": "6688b0cd",
    "metadata": {},
    "source": [
-    "## FUNCTION#1 - Using Selenium to open website and BeautifulSoup to scrape :\n",
-    "- Company Name\n",
-    "- Company JSON Url\n",
-    "- Company Reviews"
+    "## FUNCTION#1 - Using Selenium to open website and click next page"
    ]
   },
   {
@@ -18,11 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def jsscraper1():\n",
     "from selenium import webdriver\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.common.by import By\n",
+    "\n",
     "import time\n",
     "\n",
     "from bs4 import BeautifulSoup\n",
@@ -33,29 +30,93 @@
     "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
     "driver.get(url)\n",
     "\n",
-    "\n",
-    "\n",
-    "counter = 0\n",
-    "while counter < 100:\n",
+    "count=0\n",
+    "while True:\n",
     "    try:\n",
     "        driver.find_element(By.CLASS_NAME, 'Gk2xjdpX_s0S3hsfi__X').click()\n",
-    "        counter += 1\n",
+    "        count += 1\n",
     "        try:\n",
     "            time.sleep(2)\n",
     "            driver.find_element(By.CLASS_NAME, 'gwCwc3YZYufjgIcBtu0l').click()\n",
     "        except:\n",
     "            continue\n",
     "    except:\n",
-    "        break\n",
-    "\n",
-    "soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
-    "\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63fc52ca",
+   "metadata": {},
+   "source": [
+    "# Function#1.5a - Parsing the page source (try)\n",
+    "Selenium couldn't get the page source because the size is too large, returns a timeout error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04cb6a84",
+   "metadata": {},
+   "source": [
+    "<img src=\"./ImageFile/bsError.png\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f55143e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This code here doesn't work\n",
+    "soup = BeautifulSoup(driver.page_source, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05ce455b",
+   "metadata": {},
+   "source": [
+    "# Function#1.5b - Alternative way (except)\n",
+    "After selenium completely open the web source, copy and paste the page source onto csv file manually and save as index.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5eca741",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f1  =  open(\"index.txt\" , \"r\")\n",
+    "soup = BeautifulSoup(f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dba16036",
+   "metadata": {},
+   "source": [
+    "# Function#2 - BeautifulSoup to scrape :\n",
+    "- Company Name\n",
+    "- Company JSON Url\n",
+    "- Company Reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de22e3f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "all_company_info = soup.find_all(name=\"div\", class_=\"_WfdmOZ2wLBd0x_TFyKO\")\n",
     "\n",
     "company_list = []\n",
     "company_url_list = []\n",
     "company_rating = []\n",
     "\n",
+    "## Get company name\n",
     "for i in range(len(all_company_info)):\n",
     "    company_list.append(all_company_info[i].find(name=\"a\", class_=\"_9d6_WXgVpZWn7HaXEgs\").getText())\n",
     "\n",
@@ -64,7 +125,7 @@
     "for i in range(len(all_company_info)):\n",
     "    company_url_list.append(endpoint + all_company_info[i].find(name=\"a\", class_=\"_9d6_WXgVpZWn7HaXEgs\")[\"href\"])\n",
     "\n",
-    "\n",
+    "## Get company rating\n",
     "for i in range(len(all_company_info)):\n",
     "    company_rating.append(float(all_company_info[i].find_all(name=\"span\", class_=\"j6BF91AmxWn9vS_m399j\")[1].getText().split(\"out\")[0]))\n",
     "\n",
@@ -74,9 +135,11 @@
     "    \"company_rating\" : company_rating\n",
     "}\n",
     "\n",
+    "## converting results into pandas dataframe\n",
     "df = pd.DataFrame(data=data)\n",
-    "    \n",
-    "df"
+    "\n",
+    "## Remove company without rating\n",
+    "df = df[df[\"company_rating\"] != 0]"
    ]
   },
   {
@@ -84,7 +147,7 @@
    "id": "b83e5e7e",
    "metadata": {},
    "source": [
-    "## FUNCTION#2 - Pass urls in dataframe to BeautifulSoup and retrieve :\n",
+    "## FUNCTION#3 - Pass urls in dataframe to BeautifulSoup and scrape :\n",
     "\n",
     "- Salary Rate\n",
     "- Recommendation Rate\n",
@@ -104,92 +167,75 @@
    },
    "outputs": [],
    "source": [
-    "def jsscraper2(Dataframe):\n",
-    "    from bs4 import BeautifulSoup\n",
-    "    import pandas as pd\n",
-    "    import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import requests\n",
     "\n",
-    "    df = Dataframe\n",
+    "df = Dataframe\n",
     "\n",
-    "    five_star_list = []\n",
-    "    four_star_list = []\n",
-    "    three_star_list = []\n",
-    "    two_star_list = []\n",
-    "    one_star_list = []\n",
-    "    salary_rate_list = []\n",
-    "    recommendation_rate_list = []\n",
+    "five_star_list = []\n",
+    "four_star_list = []\n",
+    "three_star_list = []\n",
+    "two_star_list = []\n",
+    "one_star_list = []\n",
+    "salary_rate_list = []\n",
+    "recommendation_rate_list = []\n",
     "\n",
-    "    for url in df['company_js_url']:\n",
-    "        response = requests.get(url)\n",
-    "        data = response.text\n",
-    "        soup = BeautifulSoup(data, \"html.parser\")\n",
+    "for url in df['company_js_url']:\n",
+    "    response = requests.get(url)\n",
+    "    data = response.text\n",
+    "    soup = BeautifulSoup(data, \"html.parser\")\n",
     "\n",
-    "        try:\n",
-    "            salary_rate = soup.find_all(name=\"div\", class_=\"RL2EfHhuwPsO8xlgwG_S\")[0].getText()\n",
-    "            salary_rate_list.append(salary_rate)\n",
-    "        except:\n",
-    "            salary_rate_list.append(\"No Info\")\n",
+    "    try:\n",
+    "        salary_rate = soup.find_all(name=\"div\", class_=\"RL2EfHhuwPsO8xlgwG_S\")[0].getText()\n",
+    "        salary_rate_list.append(salary_rate)\n",
+    "    except:\n",
+    "        salary_rate_list.append(\"No Info\")\n",
     "\n",
-    "        try:\n",
-    "            recommendation_rate = soup.find_all(name=\"div\", class_=\"RL2EfHhuwPsO8xlgwG_S\")[1].getText()\n",
-    "            recommendation_rate_list.append(recommendation_rate)\n",
-    "        except:\n",
-    "            recommendation_rate_list.append(\"No Info\")\n",
+    "    try:\n",
+    "        recommendation_rate = soup.find_all(name=\"div\", class_=\"RL2EfHhuwPsO8xlgwG_S\")[1].getText()\n",
+    "        recommendation_rate_list.append(recommendation_rate)\n",
+    "    except:\n",
+    "        recommendation_rate_list.append(\"No Info\")\n",
     "\n",
-    "        try:\n",
-    "            five_star = soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[0].getText()\n",
-    "            five_star_list.append(five_star)\n",
-    "        except:\n",
-    "            five_star_list.append(\"0\")\n",
+    "    try:\n",
+    "        five_star = soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[0].getText()\n",
+    "        five_star_list.append(five_star)\n",
+    "    except:\n",
+    "        five_star_list.append(\"0\")\n",
     "\n",
-    "        try:\n",
-    "            four_star = soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[1].getText()\n",
-    "            four_star_list.append(four_star)\n",
-    "        except:\n",
-    "            four_star_list.append(\"0\")\n",
+    "    try:\n",
+    "        four_star = soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[1].getText()\n",
+    "        four_star_list.append(four_star)\n",
+    "    except:\n",
+    "        four_star_list.append(\"0\")\n",
     "\n",
-    "        try:\n",
-    "            three_star = soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[2].getText()\n",
-    "            three_star_list.append(three_star)\n",
-    "        except:\n",
-    "            three_star_list.append(\"0\")\n",
+    "    try:\n",
+    "        three_star = soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[2].getText()\n",
+    "        three_star_list.append(three_star)\n",
+    "    except:\n",
+    "        three_star_list.append(\"0\")\n",
     "\n",
-    "        try:\n",
-    "            two_star = soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[3].getText()\n",
-    "            two_star_list.append(two_star)\n",
-    "        except:\n",
-    "            two_star_list.append(\"0\")\n",
+    "    try:\n",
+    "        two_star = soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[3].getText()\n",
+    "        two_star_list.append(two_star)\n",
+    "    except:\n",
+    "        two_star_list.append(\"0\")\n",
     "\n",
-    "        try:\n",
-    "            one_star =  soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[4].getText()\n",
-    "            one_star_list.append(one_star)\n",
-    "        except:\n",
-    "            one_star_list.append(\"0\")\n",
+    "    try:\n",
+    "        one_star =  soup.find_all(name=\"span\", class_=\"DCaw56gNq5O1IBoC5xcz\")[4].getText()\n",
+    "        one_star_list.append(one_star)\n",
+    "    except:\n",
+    "        one_star_list.append(\"0\")\n",
     "\n",
-    "    df[\"five_star_rating\"] = five_star_list\n",
-    "    df[\"four_star_rating\"] = four_star_list\n",
-    "    df[\"three_star_rating\"] = three_star_list\n",
-    "    df[\"two_star_rating\"] = two_star_list\n",
-    "    df[\"one_star_rating\"] = one_star_list\n",
-    "    df[\"salary_rate\"] = salary_rate_list\n",
-    "    df[\"recommendation_rate\"] = recommendation_rate_list\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11481eb1",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "df = jsscraper1()\n",
-    "df = jsscraper2(df)\n",
-    "\n",
-    "df"
+    "## Save to the dataframe        \n",
+    "df[\"five_star_rating\"] = five_star_list\n",
+    "df[\"four_star_rating\"] = four_star_list\n",
+    "df[\"three_star_rating\"] = three_star_list\n",
+    "df[\"two_star_rating\"] = two_star_list\n",
+    "df[\"one_star_rating\"] = one_star_list\n",
+    "df[\"salary_rate\"] = salary_rate_list\n",
+    "df[\"recommendation_rate\"] = recommendation_rate_list"
    ]
   },
   {
@@ -197,18 +243,16 @@
    "id": "cf9b5f35",
    "metadata": {},
    "source": [
-    "## FUNCTION#3 - Filter"
+    "## FUNCTION#4 - To filter out companies with extra information"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95a252ce",
+   "id": "7f17b357",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Function created to extract all the extra info from each company jobstreet website url\n",
-    "## To unfilter out no info in later stage\n",
     "extra_info_list = []\n",
     "\n",
     "for i in df[\"company_js_url\"]:\n",
@@ -219,18 +263,19 @@
     "    try:\n",
     "        extra_info_list.append(soup.find(name=\"div\", class_=\"E5REvPGaM2o9YsLBgK75\").getText())\n",
     "    except:\n",
-    "        extra_info_list.append(\"No Info\")"
+    "        extra_info_list.append(\"No Info\")\n",
+    "        \n",
+    "## Remove company without extra info       \n",
+    "df[\"extra_info\"] = extra_info_list\n",
+    "df = df[df[\"extra_info\"] != \"No Info\"]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d862c12a",
+   "cell_type": "markdown",
+   "id": "d6f567a5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Filter data with No Info\n",
-    "df = df[df[\"extra_info\"] != \"No Info\"]"
+    "## FUNCTION#5 - Pass urls in dataframe to BeautifulSoup and scrape :"
    ]
   },
   {
@@ -249,13 +294,10 @@
     "language_list = []\n",
     "working_hours = []\n",
     "\n",
-    "\n",
-    "\n",
     "all_company_info_list = []\n",
-    "c = 0\n",
     "\n",
-    "for url in df_without_no_info[\"company_js_url\"]:\n",
-    "    \n",
+    "c = 0\n",
+    "for url in df[\"company_js_url\"]:\n",
     "    ## Function to avoid connection peer error\n",
     "    trycnt = 3  # max try cnt\n",
     "    while trycnt > 0:\n",
